--- a/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
+++ b/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
@@ -69,10 +69,19 @@
     <Compile Include="Migrations\201901251558200_AddCategoryDescription.Designer.cs">
       <DependentUpon>201901251558200_AddCategoryDescription.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901251835522_AddProductDescriptionManCodePrice.cs" />
+    <Compile Include="Migrations\201901251835522_AddProductDescriptionManCodePrice.Designer.cs">
+      <DependentUpon>201901251835522_AddProductDescriptionManCodePrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="stylecop.json" />
+    <None Include="stylecop1.json" />
+    <None Include="stylecop2.json" />
+    <None Include="stylecop3.json" />
+    <None Include="stylecop4.json" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
@@ -84,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901251558200_AddCategoryDescription.resx">
       <DependentUpon>201901251558200_AddCategoryDescription.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901251835522_AddProductDescriptionManCodePrice.resx">
+      <DependentUpon>201901251835522_AddProductDescriptionManCodePrice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
